--- a/src/app/patient-profile/detail-access-mode/detail-access-mode.page.html
+++ b/src/app/patient-profile/detail-access-mode/detail-access-mode.page.html
@@ -1,9 +1,97 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>detail-access-mode</ion-title>
-  </ion-toolbar>
+    <ion-toolbar>
+        <ion-buttons slot="start">
+            <ion-back-button text="Patient profile" icon="chevron-back-outline"></ion-back-button>
+        </ion-buttons>
+        <ion-buttons slot="end">
+            <ion-button>
+            </ion-button>
+        </ion-buttons>
+    </ion-toolbar>
+    <ion-row>
+        <ion-col size="4" class="ion-align-self-start">
+        </ion-col>
+        <ion-col size="4" class="ion-align-self-end">
+            <ion-card color="transparent" class="deviceTemplate-card">
+                <ion-img src='assets/icon/accessMode.png'></ion-img>
+            </ion-card>
+        </ion-col>
+        <ion-col size="4" class="ion-align-self-center">
+        </ion-col>
+    </ion-row>
+    <ion-row>
+        <ion-col size="1" class="ion-align-self-start">
+        </ion-col>
+        <ion-col size="10" class="ion-align-self-center">
+            <ion-list-header>
+                <ion-label class="text-top">Access mode</ion-label>
+            </ion-list-header>
+        </ion-col>
+        <ion-col size="1" class="ion-align-self-end">
+        </ion-col>
+    </ion-row>
+
+    <ion-segment value="all" color="tertiary" class="animate__animated animate__slideInUp animate__fast" scrollable="true" mode="md" [(ngModel)]="segmentModel" (ionChange)="segmentChanged($event)" lines="none">
+        <ion-segment-button value="features">
+            <ion-icon name="reader-outline"></ion-icon>
+            <ion-label>Features</ion-label>
+        </ion-segment-button>
+        <ion-segment-button value="AdaptionRequest">
+            <ion-icon name="chatbox-ellipses-outline"></ion-icon>
+            <ion-label text-wrap>Adaption request</ion-label>
+        </ion-segment-button>
+        <ion-segment-button value="AdaptionTypeRequired">
+            <ion-icon name="star-half-outline"></ion-icon>
+            <ion-label text-wrap>Adaption type required</ion-label>
+        </ion-segment-button>
+        <ion-segment-button value="AdaptionDetailRequired">
+            <ion-icon name="telescope-outline"></ion-icon>
+            <ion-label text-wrap>Adaption detail required</ion-label>
+        </ion-segment-button>
+    </ion-segment>
+
 </ion-header>
 
 <ion-content>
+    <div *ngIf="segmentModel === 'features'">
+        <ion-list>
+            <ion-list-header>
+                <ion-icon class="segmentIcon" name="qr-code-outline"></ion-icon>Access mode type</ion-list-header>
+            <ion-item>
+
+                <ion-label *ngIf="accessMode['TypeAccessMode'] == 1"> Auditory</ion-label>
+                <ion-label *ngIf="accessMode['TypeAccessMode'] == 2"> Colour</ion-label>
+                <ion-label *ngIf="accessMode['TypeAccessMode'] == 3"> ItemSize</ion-label>
+                <ion-label *ngIf="accessMode['TypeAccessMode'] == 4"> Olfactory</ion-label>
+                <ion-label *ngIf="accessMode['TypeAccessMode'] == 5"> Orientation</ion-label>
+                <ion-label *ngIf="accessMode['TypeAccessMode'] == 6"> Position</ion-label>
+                <ion-label *ngIf="accessMode['TypeAccessMode'] == 7"> Tactile</ion-label>
+                <ion-label *ngIf="accessMode['TypeAccessMode'] == 8"> Text on image</ion-label>
+                <ion-label *ngIf="accessMode['TypeAccessMode'] == 9"> Textual</ion-label>
+                <ion-label *ngIf="accessMode['TypeAccessMode'] == 10"> Visual</ion-label>
+            </ion-item>
+
+            <ion-list-header>
+                <ion-icon class="segmentIcon" name="clipboard-outline"></ion-icon>Description</ion-list-header>
+            <ion-item>
+
+                <ion-label> {{accessMode['Description']}}</ion-label>
+
+            </ion-item>
+        </ion-list>
+    </div>
+    <div *ngIf="segmentModel === 'AdaptionRequest'">
+
+        <app-component-adaption-request></app-component-adaption-request>
+    </div>
+    <div *ngIf="segmentModel === 'AdaptionTypeRequired'">
+
+        <app-component-adaption-type-required></app-component-adaption-type-required>
+    </div>
+    <div *ngIf="segmentModel === 'AdaptionDetailRequired'">
+
+        <app-component-adaption-detail-required></app-component-adaption-detail-required>
+    </div>
+
 
 </ion-content>
