--- a/src/app/patient-profile/add-patient-profile/add-patient-profile.page.html
+++ b/src/app/patient-profile/add-patient-profile/add-patient-profile.page.html
@@ -1,9 +1,130 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>addPatientProfile</ion-title>
-  </ion-toolbar>
+
+    <ion-toolbar>
+        <ion-buttons slot="start">
+            <ion-back-button text="Patient Profiles" icon="chevron-back-outline"></ion-back-button>
+        </ion-buttons>
+        <ion-buttons slot="end">
+            <ion-button>
+            </ion-button>
+        </ion-buttons>
+
+    </ion-toolbar>
+    <ion-row>
+        <ion-col size="4" class="ion-align-self-start">
+
+        </ion-col>
+        <ion-col size="4" class="ion-align-self-end">
+            <ion-card color="transparent" class="deviceTemplate-card">
+                <ion-img src='assets/icon/patient.png'></ion-img>
+
+            </ion-card>
+        </ion-col>
+        <ion-col size="4" class="ion-align-self-center">
+        </ion-col>
+
+    </ion-row>
+    <ion-row>
+        <ion-col size="1" class="ion-align-self-start">
+
+        </ion-col>
+        <ion-col size="10" class="ion-align-self-center">
+
+            <ion-list-header>
+                <ion-label class="text-top">Add Patient Profile</ion-label>
+            </ion-list-header>
+
+        </ion-col>
+        <ion-col size="1" class="ion-align-self-end">
+
+        </ion-col>
+
+    </ion-row>
+    <ion-segment value="all" color="tertiary" scrollable="true" mode="md" [(ngModel)]="segmentModel" (ionChange)="segmentChanged($event)" lines="none">
+        <ion-segment-button value="patientProfile">
+            <ion-icon name="receipt-outline"></ion-icon>
+            <ion-label text-wrap>Features</ion-label>
+        </ion-segment-button>
+        <ion-segment-button value="disability" [disabled]="!patientOk">
+            <ion-icon name="accessibility-outline"></ion-icon>
+            <ion-label text-wrap>Disability</ion-label>
+        </ion-segment-button>
+        <ion-segment-button value="condition" [disabled]="!patientOk">
+            <ion-icon name="list-circle-outline"></ion-icon>
+            <ion-label text-wrap>Condition</ion-label>
+        </ion-segment-button>
+        <ion-segment-button value="accessMode" [disabled]="!patientOk">
+            <ion-icon name="keypad-outline"></ion-icon>
+            <ion-label text-wrap>Access Mode</ion-label>
+        </ion-segment-button>
+
+    </ion-segment>
 </ion-header>
 
 <ion-content>
+
+    <div *ngIf="segmentModel === 'patientProfile'">
+        <form [formGroup]="patientProfileForm" (ngSubmit)="onSubmit()">
+            <ion-card-header [hidden]="!patientOk" color="success" class="animate__animated animate__slideInUp animate__fast"> You can add another parameters for {{name}} </ion-card-header>
+            <ion-item [disabled]="patientOk">
+                <ion-label position="stacked">Region</ion-label>
+                <ion-input type="text" formControlName="region" class="form-control"></ion-input>
+                <div class="error" *ngIf="patientProfileForm.controls.region.errors && patientProfileForm.controls.region.touched">
+                    To add Patient Profile please fill out this field
+                </div>
+            </ion-item>
+            <ion-item lines="full" [disabled]="patientOk">
+                <ion-label>Preferred Language</ion-label>
+                <ion-select value="ES" okText="Okay" cancelText="Dismiss" formControlName="PreferredLanguage">
+                    <div class="error" *ngIf="patientProfileForm.controls.PreferredLanguage.errors && patientProfileForm.controls.PreferredLanguage.touched">
+                        Please fill out this field
+                    </div>
+                    <ion-select-option value="1">ES</ion-select-option>
+                    <ion-select-option value="2">EN</ion-select-option>
+                    <ion-select-option value="3">FR</ion-select-option>
+                    <ion-select-option value="4">IT</ion-select-option>
+                    <ion-select-option value="5">PR</ion-select-option>
+                    <ion-select-option value="6">DE</ion-select-option>
+                    <ion-select-option value="7">JA</ion-select-option>
+                    <ion-select-option value="8">KO</ion-select-option>
+                    <ion-select-option value="9">ZH</ion-select-option>
+
+                </ion-select>
+            </ion-item>
+
+            <ion-item lines="full" [disabled]="patientOk">
+                <ion-label>Hazard Avoidance</ion-label>
+                <ion-select value="Sound" okText="Okay" cancelText="Dismiss" formControlName="HazardAvoidance">
+                    <div class="error" *ngIf="patientProfileForm.controls.HazardAvoidance.errors && patientProfileForm.controls.HazardAvoidance.touched">
+                        Please fill out this field
+                    </div>
+                    <ion-select-option value="1">Flashing</ion-select-option>
+                    <ion-select-option value="2">Motion Simulation</ion-select-option>
+                    <ion-select-option value="3">Olfactory Hazard</ion-select-option>
+                    <ion-select-option value="4">Sound</ion-select-option>
+
+                </ion-select>
+            </ion-item>
+            <br>
+            <br>
+
+            <ion-button expand="block " class="save" size="small" fill="solid" type="submit" color="light" [hidden]="patientOk" [disabled]="!patientProfileForm.valid">Done</ion-button>
+        </form>
+        <ion-card>
+        </ion-card>
+    </div>
+    <div *ngIf="segmentModel === 'disability'">
+        <!--   <app-add-telemetry-component></app-add-telemetry-component> -->
+
+    </div>
+    <div *ngIf="segmentModel === 'condition'">
+        <!--  <app-add-property-component></app-add-property-component> -->
+
+    </div>
+    <div *ngIf="segmentModel === 'accessMode'">
+        <!-- <app-add-command-component></app-add-command-component> -->
+
+    </div>
+    <br>
 
 </ion-content>
