--- a/src/app/patient-profile/patient-profile.page.html
+++ b/src/app/patient-profile/patient-profile.page.html
@@ -34,7 +34,7 @@
         <ion-col size="10" class="ion-align-self-center">
 
             <ion-list-header>
-                <ion-label class="text-top">Patient profiles</ion-label>
+                <ion-label class="text-top">Patient Profiles</ion-label>
             </ion-list-header>
 
         </ion-col>
