--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -11,18 +11,18 @@
         </ion-tab-button>
         <ion-tab-button tab="tab1">
             <ion-icon name="cog-outline"></ion-icon>
-            <ion-label>Device template</ion-label>
+            <ion-label>Device Template</ion-label>
         </ion-tab-button>
 
         <ion-tab-button tab="tab2">
-            <ion-icon name="accessibility-outline"></ion-icon>
+            <ion-icon name="man-outline"></ion-icon>
 
-            <ion-label>Patient profile</ion-label>
+            <ion-label>Patient Profile</ion-label>
         </ion-tab-button>
 
         <ion-tab-button tab="tab3">
             <ion-icon name="medkit-outline"></ion-icon>
-            <ion-label>Care plan</ion-label>
+            <ion-label>Care Plan</ion-label>
         </ion-tab-button>
     </ion-tab-bar>
 
